--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,13 @@
             "email": "hamail.tahir@ratepay.com"
         }
     ],
-    "require": {}
+    "autoload": {
+        "classmap": [
+            "src/"
+        ]
+    },
+    "require": {},
+    "require-dev": {
+        "phpunit/phpunit": "^9"
+    }
 }
