--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,14 @@
             "src/"
         ]
     },
+    "autoload-dev": {
+        "psr-4": {
+          "CalulatorApp\\Tests\\": "tests/"
+        }
+    },
     "require": {},
     "require-dev": {
         "phpunit/phpunit": "^9"
     }
+    
 }
